--- a/src/components/cardApartamens/CardApartamens.module.scss
+++ b/src/components/cardApartamens/CardApartamens.module.scss
@@ -60,4 +60,21 @@
   .modalContainer {
     position: absolute;
   }
+
+  @media (max-width: 1024px) {
+    margin: 10px 0;
+    width: 89%;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+
+    img {
+      height: 100px;
+      width: 100px;
+    }
+
+    p {
+      display: none;
+    }
+  }
 }
