--- a/src/components/cardReviews/CardReviews.module.scss
+++ b/src/components/cardReviews/CardReviews.module.scss
@@ -41,4 +41,17 @@
     text-transform: uppercase;
     height: 24px;
   }
+
+  @media (min-width: 1024px) and (max-width: 1200px) {
+    padding: 16px 14px;
+    width: 250px;
+    height: 220px;
+    margin: 20px auto;
+    border: 1px solid #f5f5f4;
+
+    .triangle::before {
+      top: 60px;
+      left: 549px;
+    }
+  }
 }
