--- a/src/components/ourApartamens/OurApartamens.module.scss
+++ b/src/components/ourApartamens/OurApartamens.module.scss
@@ -22,4 +22,10 @@
     display: flex;
     justify-content: space-between;
   }
+
+  @media (max-width: 1024px) {
+    .cards {
+      flex-direction: column;
+    }
+  }
 }
