--- a/src/UI/header/links.module.scss
+++ b/src/UI/header/links.module.scss
@@ -128,19 +128,35 @@
 
   @media (max-width: 1024px) {
     .navLinks {
-      display: none;
+      position: fixed;
+      top: -100%;
+      left: 50%;
+      transform: translateX(-50%);
+      background-color: rgba(41, 37, 36, 0.95);
+      padding: 2rem;
+      border-radius: 12px;
+      display: flex;
       flex-direction: column;
-      position: absolute;
-      top: 35px;
-      left: 0;
-      width: 100%;
-      background-color: #292524;
-      padding: 1rem;
-      gap: 1rem;
+      gap: 1.5rem;
+      align-items: center;
+      width: 80%;
+      max-width: 300px;
+      transition: top 0.4s ease-in-out;
+
+      a {
+        text-decoration: none;
+        color: white;
+        font-size: 1.2rem;
+        transition: color 0.3s ease-in-out;
+
+        &:active {
+          color: #009142;
+        }
+      }
     }
 
     .navLinks.open {
-      display: flex;
+      top: 5%;
     }
 
     .menuToggle {
