--- a/src/components/cardApartamens/CardApartamens.module.scss
+++ b/src/components/cardApartamens/CardApartamens.module.scss
@@ -1,8 +1,9 @@
 .card {
   text-align: left;
-  padding: 2rem;
+  padding: 1.5rem;
   background-color: #e7e5e4;
   width: 280px;
+  max-width: 100%;
   border-radius: 0.75rem;
   border: 2px solid #d6d3d1;
   display: flex;
@@ -20,24 +21,29 @@
     border-radius: 0.75rem;
     object-fit: cover;
     height: 200px;
+    width: 100%;
   }
 
   .cardContent {
     flex-grow: 1;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 1rem;
+    width: 100%;
 
     h3 {
       font-size: 1.25rem;
+      flex-shrink: 1;
     }
 
     p {
-      width: 100%;
-      text-align: left;
+      display: none;
     }
   }
 
   .cardButton {
-    display: flex;
-    justify-content: center;
+    flex-shrink: 0;
 
     button {
       cursor: pointer;
@@ -57,13 +63,11 @@
     }
   }
 
-  .modalContainer {
-    position: absolute;
-  }
-
   @media (max-width: 1024px) {
-    margin: 10px 0;
-    width: 89%;
+    width: 100%;
+    max-width: 90vw;
+    margin: 10px auto;
+    padding: 1rem;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
@@ -71,10 +75,46 @@
     img {
       height: 100px;
       width: 100px;
+      flex-shrink: 0;
+    }
+
+    .cardContent {
+      flex-grow: 1;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
     }
 
     p {
       display: none;
+    }
+  }
+
+  @media (max-width: 1024px) {
+    width: 95%;
+    max-width: 400px;
+
+    &:hover {
+      transform: scale(1);
+      box-shadow: 0 0px 0px rgba(0, 0, 0, 0);
+    }
+
+    img {
+      height: 80px;
+      width: 80px;
+    }
+
+    .cardContent {
+      h3 {
+        font-size: 1rem;
+      }
+    }
+
+    .cardButton {
+      button {
+        font-size: 14px;
+        padding: 0.4rem 1rem;
+      }
     }
   }
 }
