--- a/src/components/intro/Intro.module.scss
+++ b/src/components/intro/Intro.module.scss
@@ -7,6 +7,17 @@
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
+
+  width: 100%;
+  transition: max-width 0.3s ease-in-out;
+
+  @media (max-width: 1024px) {
+    font-size: 50px !important;
+  }
+
+  @media (max-width: 768px) {
+    font-size: 40px !important;
+  }
 }
 
 .intro {
@@ -38,6 +49,16 @@
 
     .logo {
       filter: drop-shadow(4px 4px 60px #000000);
+      width: 100%;
+      transition: max-width 0.3s ease-in-out;
+
+      @media (max-width: 1024px) {
+        max-width: 125px;
+      }
+
+      @media (max-width: 768px) {
+        max-width: 115px;
+      }
     }
 
     .tagline {
@@ -45,6 +66,10 @@
       font-style: italic;
       color: #16a34a;
       text-shadow: 4px 4px 30px #000000, -4px -4px 30px #000000;
+
+      @media (max-width: 1024px) {
+        font-size: 1rem;
+      }
     }
   }
 
@@ -70,6 +95,14 @@
         background-color: #009142;
         border-color: #009142;
         transform: scale(1.05);
+      }
+
+      @media (max-width: 1024px) {
+        font-size: 1.5rem !important;
+      }
+
+      @media (max-width: 768px) {
+        font-size: 1.2rem !important;
       }
     }
   }
