--- a/src/components/cardApartamens/CardApartamens.module.scss
+++ b/src/components/cardApartamens/CardApartamens.module.scss
@@ -3,13 +3,13 @@
   padding: 1.5rem;
   background-color: #e7e5e4;
   width: 280px;
-  max-width: 100%;
   border-radius: 0.75rem;
   border: 2px solid #d6d3d1;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  gap: 0.5rem;
+  align-items: center;
+  gap: 1.25rem;
   transition: all 0.5s ease-in-out;
 
   &:hover {
@@ -27,18 +27,18 @@
   .cardContent {
     flex-grow: 1;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 1rem;
+    flex-direction: column;
+    gap: 1.25rem;
     width: 100%;
 
     h3 {
+      margin: 0;
       font-size: 1.25rem;
       flex-shrink: 1;
     }
 
     p {
-      display: none;
+      margin: 0;
     }
   }
 
@@ -60,6 +60,15 @@
         border-color: #009142;
         color: white;
       }
+    }
+  }
+
+  @media (min-width: 1024px) and (max-width: 1200px) {
+    width: 220px;
+    gap: 0.5rem;
+
+    .cardContent {
+      gap: 0.5rem;
     }
   }
 
@@ -92,7 +101,7 @@
 
   @media (max-width: 1024px) {
     width: 95%;
-    max-width: 400px;
+    max-width: 350px;
 
     &:hover {
       transform: scale(1);
