--- a/src/components/cardReviews/CardReviews.module.scss
+++ b/src/components/cardReviews/CardReviews.module.scss
@@ -47,11 +47,22 @@
     width: 250px;
     height: 220px;
     margin: 20px auto;
-    border: 1px solid #f5f5f4;
 
     .triangle::before {
       top: 60px;
-      left: 549px;
+
+      left: 246px;
+    }
+  }
+
+  @media (max-width: 768px) {
+    font-size: 1rem;
+    margin: 20px 0;
+    width: 250px;
+
+    .triangle::before {
+      top: 68px;
+      left: 250px;
     }
   }
 }
