--- a/src/components/reviews/Reviews.module.scss
+++ b/src/components/reviews/Reviews.module.scss
@@ -6,6 +6,20 @@
   gap: 2.5rem;
   padding: 4rem 0;
 
+  @media (max-width: 768px) {
+    h2 {
+      font-size: 1rem;
+    }
+
+    .slick-prev {
+      left: -50px;
+    }
+
+    .slick-next {
+      right: -50px;
+    }
+  }
+
   h2 {
     font-size: 1.5rem;
     margin: 0;
@@ -14,7 +28,7 @@
   .reviewsContent {
     width: 90%;
     max-width: 1500px;
-    padding: 0 1rem;
+    padding: 0;
   }
 
   .reviewsSlider {
@@ -41,7 +55,7 @@
     gap: 1rem;
 
     p {
-      font-size: 18px;
+      font-size: 1rem;
     }
 
     button {
