--- a/src/UI/modal/select/MySelect.module.scss
+++ b/src/UI/modal/select/MySelect.module.scss
@@ -1,8 +1,8 @@
 .selectWrapper {
   position: relative;
   width: 100%;
-  max-width: 400px;
-  min-width: 400px;
+  // max-width: 400px;
+  // min-width: 400px;
 }
 
 .selectInput {
