--- a/src/components/contactsInformation/ContactsInformation.module.scss
+++ b/src/components/contactsInformation/ContactsInformation.module.scss
@@ -18,6 +18,10 @@
     h2 {
       font-size: 1.5rem;
       text-align: center;
+
+      @media (max-width: 768px) {
+        font-size: 1.3rem;
+      }
     }
 
     .infoContainer {
@@ -43,6 +47,12 @@
         align-items: center;
         width: 40%;
 
+        @media (max-width: 768px) {
+          padding: 0;
+          margin: 0 auto;
+          text-align: center;
+        }
+
         .infoBlock {
           width: 100%;
           display: flex;
@@ -51,11 +61,20 @@
 
           h3 {
             font-size: 1.125rem;
-            font-weight: bold;
           }
 
           p {
             font-size: 1rem;
+          }
+
+          @media (max-width: 768px) {
+            h3 {
+              font-size: 1rem;
+            }
+
+            p {
+              font-size: 0.8rem;
+            }
           }
         }
 
