--- a/src/UI/header/links.module.scss
+++ b/src/UI/header/links.module.scss
@@ -1,12 +1,6 @@
-.headerContainer {
-  height: 0;
-}
-
 .header {
   position: fixed;
-  left: 0;
-  right: 0;
-  top: 0;
+  width: 100%;
   z-index: 50;
   background-color: #292524;
   color: white;
@@ -146,7 +140,7 @@
       a {
         text-decoration: none;
         color: white;
-        font-size: 1.2rem;
+        font-size: 1rem;
         transition: color 0.3s ease-in-out;
 
         &:active {
