--- a/src/UI/input/Input.module.scss
+++ b/src/UI/input/Input.module.scss
@@ -1,17 +1,22 @@
-.inputContainer {
-  width: 100%;
-  padding: 0.25rem 0;
-}
-
 .inputField {
-  width: 93.5%;
+  width: 400px;
   background-color: transparent;
   color: #475569;
-  font-size: 0.875rem;
+  font-size: 0.9rem;
   border: 1px solid #e2e8f0;
   border-radius: 0.375rem;
   padding: 0.5rem 0.75rem;
   transition: all 0.3s ease;
+
+  @media (max-width: 1024px) {
+    width: 350px;
+    font-size: 0.9rem;
+  }
+
+  @media (max-width: 768px) {
+    width: 300px;
+    font-size: 0.8rem;
+  }
 
   &::placeholder {
     color: #94a3b8;
