--- a/src/UI/modal/Modal.module.scss
+++ b/src/UI/modal/Modal.module.scss
@@ -2,8 +2,6 @@
   text-align: left;
   z-index: 999;
   position: fixed;
-  top: 0;
-  left: 0;
   width: 100vw;
   height: 100vh;
   background: rgba(0, 0, 0, 0.5);
@@ -34,7 +32,7 @@
   flex-direction: column;
   gap: 1rem;
 
-  h1 {
+  h2 {
     text-align: center;
     font-size: 1.5rem;
     margin: 0;
@@ -50,6 +48,7 @@
   }
 
   button {
+    font-size: 1rem;
     padding: 0.5rem 1.5rem;
     border: 1px solid #a8a29e;
     background-color: #d6d3d1;
@@ -82,5 +81,25 @@
 
   .msgNone {
     height: 30px !important;
+  }
+
+  @media (max-width: 1024px) {
+    padding: 2rem 6rem;
+  }
+
+  @media (max-width: 768px) {
+    padding: 1.5rem 2rem;
+
+    h2 {
+      font-size: 1.3rem;
+    }
+
+    label {
+      font-size: 0.8rem;
+    }
+
+    button {
+      font-size: 0.8rem;
+    }
   }
 }
