--- a/src/components/about-us/AboutUs.module.scss
+++ b/src/components/about-us/AboutUs.module.scss
@@ -35,6 +35,19 @@
       margin: 0;
     }
 
+    p {
+      font-size: 1rem;
+    }
+
+    @media (max-width: 768px) {
+      h2 {
+        font-size: 1.3rem;
+      }
+      p {
+        font-size: 0.8rem;
+      }
+    }
+
     .contentBlock {
       display: flex;
       justify-content: space-between;
