--- a/src/components/cardApartamens/CardApartamens.module.scss
+++ b/src/components/cardApartamens/CardApartamens.module.scss
@@ -1,4 +1,4 @@
-.card {
+.cardApartamens {
   text-align: left;
   padding: 1.5rem;
   background-color: #e7e5e4;
@@ -47,7 +47,7 @@
 
     button {
       cursor: pointer;
-      font-size: 16px;
+      font-size: 1rem;
       padding: 0.5rem 1.5rem;
       border: 1px solid #a8a29e;
       background-color: #d6d3d1;
@@ -73,8 +73,7 @@
   }
 
   @media (max-width: 1024px) {
-    width: 100%;
-    max-width: 90vw;
+    width: 500px;
     margin: 10px auto;
     padding: 1rem;
     flex-direction: row;
@@ -82,8 +81,8 @@
     justify-content: space-between;
 
     img {
-      height: 100px;
-      width: 100px;
+      height: 80px;
+      width: 80px;
       flex-shrink: 0;
     }
 
@@ -92,6 +91,17 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
+
+      h3 {
+        font-size: 1rem;
+      }
+    }
+
+    .cardButton {
+      button {
+        font-size: 0.8rem;
+        padding: 0.4rem 1rem;
+      }
     }
 
     p {
@@ -100,30 +110,6 @@
   }
 
   @media (max-width: 1024px) {
-    width: 95%;
-    max-width: 350px;
-
-    &:hover {
-      transform: scale(1);
-      box-shadow: 0 0px 0px rgba(0, 0, 0, 0);
-    }
-
-    img {
-      height: 80px;
-      width: 80px;
-    }
-
-    .cardContent {
-      h3 {
-        font-size: 1rem;
-      }
-    }
-
-    .cardButton {
-      button {
-        font-size: 14px;
-        padding: 0.4rem 1rem;
-      }
-    }
+    width: 320px;
   }
 }
