--- a/src/components/reviews/Reviews.module.scss
+++ b/src/components/reviews/Reviews.module.scss
@@ -6,20 +6,6 @@
   gap: 2.5rem;
   padding: 4rem 0;
 
-  @media (max-width: 768px) {
-    h2 {
-      font-size: 1rem;
-    }
-
-    .slick-prev {
-      left: -50px;
-    }
-
-    .slick-next {
-      right: -50px;
-    }
-  }
-
   h2 {
     font-size: 1.5rem;
     margin: 0;
@@ -29,6 +15,7 @@
     width: 90%;
     max-width: 1500px;
     padding: 0;
+    overflow: hidden;
   }
 
   .reviewsSlider {
@@ -60,7 +47,7 @@
 
     button {
       cursor: pointer;
-      font-size: 16px;
+      font-size: 1rem;
       padding: 0.5rem 1.5rem;
       border: 1px solid #a8a29e;
       background-color: #d6d3d1;
@@ -72,6 +59,26 @@
         background-color: #009142;
         border-color: #009142;
         color: white;
+      }
+    }
+  }
+
+  @media (max-width: 768px) {
+    h2 {
+      font-size: 1.3rem;
+    }
+
+    h3 {
+      font-size: 1rem;
+    }
+
+    p {
+      font-size: 0.8rem;
+    }
+
+    .reviewButton {
+      button {
+        font-size: 0.8rem;
       }
     }
   }
