--- a/src/UI/modal/Modal.module.scss
+++ b/src/UI/modal/Modal.module.scss
@@ -32,6 +32,24 @@
   flex-direction: column;
   gap: 1rem;
 
+  .modalHeader {
+    position: relative;
+  }
+
+  .closeButton {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 32px;
+    height: 32px;
+    cursor: pointer;
+    transition: opacity 0.3s ease;
+
+    &:hover {
+      opacity: 0.7;
+    }
+  }
+
   h2 {
     text-align: center;
     font-size: 1.5rem;
@@ -99,6 +117,18 @@
     }
 
     button {
+      font-size: 0.8rem;
+    }
+
+    .msgDone {
+      font-size: 0.8rem;
+    }
+
+    .msgErr {
+      font-size: 0.8rem;
+    }
+
+    .msgNone {
       font-size: 0.8rem;
     }
   }
